--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DACBY</title>
     
-    <link rel="icon" type="image/jpg" href="images/Favicon/Favicon.jpg" />
+    <link rel="icon" type="image/png" href="images/Favicon/Favicon.png" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
